# agent-mcp-toolkit

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: bump-version.yml  docs.yml  publish.yml  test.yml
api/client_service/: index.html
api/factory/: index.html
api/server_service/: index.html
api/toolkit/: index.html
api/tools/: index.html
docs/: changelog.md  contributing.md  examples.md  index.md  installation.md
docs/api/: client_service.md  factory.md  server_service.md  toolkit.md  tools.md
examples/: basic_usage.py  custom_tools.py  index.html
installation/: index.html
search/: search_index.json
src/langchain_mcp_toolkit/: __init__.py  factory.py  prompts.py  schemas.py  toolkit.py
src/langchain_mcp_toolkit/services/: __init__.py  adapters.py  client_service.py  server_service.py
src/langchain_mcp_toolkit/tools/: __init__.py  base.py  client_tools.py  server_tools.py
tests/: conftest.py
tests/integration/: test_toolkit.py
tests/unit/: test_factory.py
tests/unit/test_services/: test_adapters.py  test_client_service.py  test_server_service.py
tests/unit/test_tools/: test_base.py  test_client_tools.py  test_server_tools.py
