[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mcp-toolkit"
version = "0.0.1"
description = "Agent toolkit for integrating Model Context Protocol (MCP) in various agent frameworks."
authors = [
    { name = "ACNet-AI", email = "agencollabnet@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli,rich]>=1.4.1,<1.5.0",
    "langchain-mcp-adapters>=0.0.5",
    "langchain>=0.3.20",
    "langgraph>=0.1.16",
    "pydantic>=2.8.0,<3.0.0",
    "anyio>=4.7.0",
]
keywords = ["agent", "mcp", "toolkit", "langchain", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "ruff>=0.2.2",
    "mypy>=1.9.0",
    "pytest-socket>=0.7.0",
    "pytest-asyncio>=0.25.0",
    "types-setuptools>=69.1.0",
]
dev = [
    "black>=24.4.0",
    "isort>=5.13.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # comprehensions
    "UP", # pyupgrade
    "N", # pep8-naming
]
ignore = [
    "E501", # line-length
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_mcp_toolkit"]

[project.urls]
Homepage = "https://github.com/acnet-ai/agent-mcp-toolkit"
Repository = "https://github.com/acnet-ai/agent-mcp-toolkit"
Issues = "https://github.com/acnet-ai/agent-mcp-toolkit/issues"